Merge branch 1.7.3-fixes into master